# actorob

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  setup_actorob.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  platform_support.md  reproducibility_report.md
.github/workflows/: ci.yml
configs/: dog_aligator_minimal.toml
docs/: ASSET_PROVENANCE.md  REPRODUCIBILITY.md
examples/: aligator_dog_three_tasks.py  build_trajectory_dashboard.py  cma_es_invdes.py  dummy_pendulum.py  model_example.py
robots/: README.md
robots/dog/: dog.xml  dog_merged.xml
robots/dog/meshes/: body_link.stl  front_left_hip_pitch_actuator.stl  front_left_hip_pitch_link.stl  front_left_hip_roll_actuator.stl  front_left_hip_roll_link.stl  front_left_knee_pitch_actuator.stl  front_left_knee_pitch_link.stl  front_right_hip_pitch_actuator.stl  front_right_hip_pitch_link.stl  front_right_hip_roll_actuator.stl  front_right_hip_roll_link.stl  front_right_knee_pitch_actuator.stl  front_right_knee_pitch_link.stl  mti_630.stl  rear_left_hip_pitch_actuator.stl  rear_left_hip_pitch_link.stl  rear_left_hip_roll_actuator.stl  rear_left_hip_roll_link.stl  rear_left_knee_pitch_actuator.stl  rear_left_knee_pitch_link.stl  rear_right_hip_pitch_actuator.stl  rear_right_hip_pitch_link.stl  rear_right_hip_roll_actuator.stl  rear_right_hip_roll_link.stl  rear_right_knee_pitch_actuator.stl
robots/humanoid_pry/: humanoid_pry.xml  humanoid_pry_merged.xml
robots/humanoid_pry/meshes/: left_ankle_pitch_link.stl  left_ankle_roll_link.stl  left_elbow_pitch_link.stl  left_elbow_yaw_link.stl  left_hip_pitch_link.stl  left_hip_roll_link.stl  left_hip_yaw_link.stl  left_knee_pitch_link.stl  left_shoulder_pitch_link.stl  left_shoulder_yaw_link.stl  pelvis_link.stl  right_ankle_pitch_link.stl  right_ankle_roll_link.stl  right_hip_pitch_link.stl  right_hip_roll_link.stl  right_hip_yaw_link.stl  right_knee_pitch_link.stl  torso_yaw_actuator.stl
robots/humanoid_ryp/: humanoid_ryp.xml  humanoid_ryp_merged.xml
robots/humanoid_ryp/meshes/: left_ankle_pitch_link.stl  left_ankle_roll_link.stl  left_hip_pitch_link.stl  left_hip_roll_link.stl  left_hip_yaw_link.stl  left_knee_pitch_link.stl  left_shoulder_roll_link.stl  pelvis_link.stl  right_ankle_pitch_link.stl  right_ankle_roll_link.stl  right_elbow_pitch_link.stl  right_hip_pitch_link.stl  right_hip_roll_link.stl  right_hip_yaw_link.stl  right_shoulder_pitch_link.stl  right_shoulder_roll_link.stl  (+1 more)
robots/humanoid_yrp/: humanoid_yrp.xml  humanoid_yrp_merged.xml
robots/pendulum/: pendulum.xml
scripts/: verify_readme_quickstart.sh  verify_release.sh  verify_wheel_install.sh
src/actorob/: __init__.py  _optional.py  mjcf.py
tests/: _lazy_import_helpers.py  conftest.py  test_actuation_constraints.py  test_actuator_evaluation.py  test_actuator_parameters.py  test_dashboard_lazy_imports.py  test_footplanner.py  test_invdes_batch_evaluator.py  test_invdes_candidate_evaluator.py  test_invdes_dashboard.py  test_invdes_design_space.py  test_invdes_lazy_imports.py  test_invdes_live_dashboard.py  test_invdes_progress.py  test_invdes_runner.py  test_invdes_trajectory_bundle.py  test_mjcf.py  test_models_utils.py  test_optuna_adapter.py  test_package_lazy_imports.py  test_root_lazy_imports.py  test_trajectories_api.py  test_trajectory_optimizer_config.py  test_trajectory_optimizer_stability.py  test_trajectory_optimizer_warm_start.py  test_trajectory_planner_contact_schedule.py  test_trajectory_record_and_dashboard.py  test_utils.py
(+84 files in other folders)
